# RevList2020

./: README.md
RL202/src/: RevocationList2020Status.rs  lib.rs
RL2020/: Cargo.toml  stronghold_file.hold
RL2020/src/: main.rs
