[package]
name = "RL2020"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
flate2 = "1.0.24"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
identity_iota = { version = "0.6" }
iota-client = { version = "1.4.0"}
identity_core = { version = "0.6.2"}
identity_did = { version = "0.6.2"}
identity_credential = { version = "0.6.2"}
dataurl = {version = "0.1.2"}
bincode = {version = "1.3.3"}
bee-message = {version = "0.1.6"}
bee-common = {version = "0.5.0"}
tokio = { version = "1", features = ["full"] }

[lib]
name = "RevocationList2020"
path = "src/lib.rs"
